commit for merge